examples/test/testpolicy7505.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy7505
  namespace: namespace198
spec:
  podSelector:
    matchLabels:
      key45: value22
      key31: value17
      key41: value0
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key17: value35
          key10: value22
          key38: value7
      podSelector:
        matchLabels:
          key29: value39
